--- a/client/src/components/Services/Service.scoped.css
+++ b/client/src/components/Services/Service.scoped.css
@@ -60,7 +60,7 @@ h2{
     padding-top: 10px;
     padding-bottom: 10px;
 }
-@media screen and (min-width: 500px){
+@media screen and (min-width: 1150px){
     .ml-auto{
         margin-left: auto;
         margin-right: 30px;
